# cwe-man

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPER.md  README.md  initial-development.txt  initial-ideation.md  notes.md  todo.md
docs/: DEVELOPMENT-TOOLING.md  PERFORMANCE-MEASUREMENT.md  QA-IMPLEMENTATION.md  SECURITY-PLAN.md  SOFTWARE-QA-DIRECTIVES.md
scripts/: run_coverage.sh  run_quality.sh  run_sanitizers.sh  run_static_analysis.sh  run_tests.sh
src/: main.cpp
src/api/: CweClient.cpp  CweClient.hpp  Sync.cpp  Sync.hpp
src/app/: App.cpp  App.hpp  State.cpp  State.hpp
src/data/: Database.cpp  Database.hpp  Models.hpp  Repository.cpp  Repository.hpp
src/logging/: FileSink.cpp  FileSink.hpp  Logger.cpp  Logger.hpp  SyslogSink.hpp
src/ui/: DetailPane.cpp  DetailPane.hpp  Layout.cpp  Layout.hpp  TreePane.cpp  TreePane.hpp
tests/: TestUtils.hpp  api_sync_test.cpp  data_database_test.cpp  data_repository_test.cpp  logger_coverage_probe.cpp  logger_no_home_test.cpp  logger_test.cpp  logging_filesink_test.cpp  ui_layout_event_test.cpp
